--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "angular-practice",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --prod"
+    "test": "ng test"
+  },
+  "engines": {
+    "node": "14.15.5",
+    "npm": "6.14.11"
   },
   "private": true,
   "dependencies": {
@@ -43,9 +47,5 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
-  },
-  "engines": {
-    "node": "14.15.5",
-    "npm": "6.14.11"
   }
 }
